--- a/app/src/main/res/layout/card_dosen.xml
+++ b/app/src/main/res/layout/card_dosen.xml
@@ -8,15 +8,15 @@
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="406dp"
+        android:layout_height="211dp">
 
         <TextView
-            android:id="@+id/txtNidnNama"
-            android:layout_width="362dp"
-            android:layout_height="33dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="25dp"
+            android:id="@+id/txtNidn"
+            android:layout_width="210dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="13dp"
             android:text="TextView"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,29 +24,49 @@
 
         <TextView
             android:id="@+id/txtGelar"
-            android:layout_width="360dp"
-            android:layout_height="33dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="207dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
             android:text="TextView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtNidnNama" />
+            app:layout_constraintTop_toBottomOf="@+id/txtNama" />
 
         <TextView
             android:id="@+id/txtEmailD"
-            android:layout_width="359dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="210dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="8dp"
             android:text="TextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtGelar" />
 
         <TextView
             android:id="@+id/txtAlamatD"
-            android:layout_width="363dp"
-            android:layout_height="37dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="210dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="8dp"
             android:text="TextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtEmailD" />
+
+        <ImageView
+            android:id="@+id/imgViewDosen"
+            android:layout_width="144dp"
+            android:layout_height="192dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toEndOf="@+id/txtEmailD"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_launcher_background" />
+
+        <TextView
+            android:id="@+id/txtNama"
+            android:layout_width="206dp"
+            android:layout_height="37dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="1dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtNidn" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
