--- a/app/src/main/res/layout/activity_data_dosen.xml
+++ b/app/src/main/res/layout/activity_data_dosen.xml
@@ -7,151 +7,168 @@
     tools:context=".DataDosen">
 
     <EditText
-        android:id="@+id/editText11"
+        android:id="@+id/editTxtFotoDsn"
         android:layout_width="122dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/editText10" />
+        app:layout_constraintStart_toEndOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtGelarDsn" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="89dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="20dp"
+        android:text="Browse.."
+        app:layout_constraintStart_toEndOf="@+id/editTxtFotoDsn"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtGelarDsn" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="45dp"
         android:layout_height="22dp"
-        android:layout_marginTop="39dp"
-        android:layout_marginEnd="38dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:text="Foto"
-        app:layout_constraintEnd_toStartOf="@+id/editText11"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <EditText
-        android:id="@+id/editText10"
+        android:id="@+id/editTxtGelarDsn"
         android:layout_width="211dp"
         android:layout_height="41dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="101dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText9" />
+        app:layout_constraintStart_toEndOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtEmailDsn" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="45dp"
         android:layout_height="22dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="38dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
         android:text="Gelar"
-        app:layout_constraintEnd_toStartOf="@+id/editText10"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <EditText
-        android:id="@+id/editText9"
+        android:id="@+id/editTxtEmailDsn"
         android:layout_width="211dp"
         android:layout_height="41dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="101dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText8" />
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtAlamatDsn" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="45dp"
         android:layout_height="22dp"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="38dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
         android:text="E-mail"
-        app:layout_constraintEnd_toStartOf="@+id/editText9"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <EditText
-        android:id="@+id/editText8"
+        android:id="@+id/editTxtAlamatDsn"
         android:layout_width="211dp"
         android:layout_height="41dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText7" />
+        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtNidnDsn" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="55dp"
         android:layout_height="23dp"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="33dp"
         android:text="Alamat"
-        app:layout_constraintEnd_toStartOf="@+id/editText8"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/editTxtNamaDsn"
         android:layout_width="211dp"
         android:layout_height="41dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="101dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="37dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="45dp"
         android:layout_height="22dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="38dp"
         android:text="NIDN"
-        app:layout_constraintEnd_toStartOf="@+id/editText7"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="45dp"
         android:layout_height="22dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginEnd="38dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="47dp"
         android:text="Nama"
-        app:layout_constraintEnd_toStartOf="@+id/editText6"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/editTxtNidnDsn"
         android:layout_width="211dp"
         android:layout_height="41dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="101dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="11dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtNamaDsn" />
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="89dp"
-        android:layout_height="35dp"
+        android:id="@+id/btnUploadImg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="144dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="101dp"
-        android:text="Browse.."
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText10" />
+        android:text="UPLOAD FOTO"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgDosen" />
+
+    <ImageView
+        android:id="@+id/imgDosen"
+        android:layout_width="317dp"
+        android:layout_height="157dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtFotoDsn"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="290dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="58dp"
-        android:layout_marginEnd="101dp"
-        android:layout_marginBottom="276dp"
-        android:text="SIMPAN"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/btnSimpan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="12dp"
+        android:text="Simpan"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText11" />
+        app:layout_constraintTop_toBottomOf="@+id/btnUploadImg" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
