--- a/app/src/main/res/layout/activity_data_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_data_mahasiswa.xml
@@ -7,7 +7,7 @@
     tools:context=".DataMahasiswa">
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/editTxtFotoMhs"
         android:layout_width="113dp"
         android:layout_height="44dp"
         android:layout_marginStart="55dp"
@@ -15,7 +15,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtEmailMhs" />
 
     <TextView
         android:id="@+id/textView5"
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/editTxtEmailMhs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
@@ -36,7 +36,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtAlamatMhs" />
 
     <TextView
         android:id="@+id/textView4"
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editTxtAlamatMhs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="41dp"
@@ -57,7 +57,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtNimMhs" />
 
     <TextView
         android:id="@+id/textView3"
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editTxtNimMhs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
@@ -78,7 +78,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtNamaMhs" />
 
     <TextView
         android:id="@+id/textView2"
@@ -91,7 +91,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editTxtNamaMhs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
@@ -118,16 +118,36 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="18dp"
         android:text="Browse.."
-        app:layout_constraintStart_toEndOf="@+id/editText5"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintStart_toEndOf="@+id/editTxtFotoMhs"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtEmailMhs" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnSimpanAddMhs"
         android:layout_width="311dp"
         android:layout_height="38dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="28dp"
         android:text="SIMPAN"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText5" />
+        app:layout_constraintTop_toBottomOf="@+id/btnUploadMhs" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="39dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtFotoMhs"
+        tools:srcCompat="@tools:sample/avatars[0]" />
+
+    <Button
+        android:id="@+id/btnUploadMhs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="143dp"
+        android:layout_marginTop="13dp"
+        android:text="Upload"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
